fix: specify select's height and remove hack for the bib's `z-index` #99

--- a/components/dropdown/src/styles/bibStyles.scss
+++ b/components/dropdown/src/styles/bibStyles.scss
@@ -13,7 +13,7 @@
 
 :host {
   position: absolute;
-  z-index: calc(var(--depth-tooltip, $ds-depth-tooltip) + 200);
+  z-index: var(--depth-tooltip, $ds-depth-tooltip);
   display: none;
 }
 
